# py-overlord

./: .gitignore  README.md  README_runner.md  bigmoney_vs_chapelwitch_report.html  compare_all_strategies.py  compare_custom_board_strategies.py  compare_skulk_strategies.py  compare_strategies.py  evolve.py  hypothesis_tester.py  kingdom_config.yaml  leaderboard.html  leaderboard.md  leaderboard.py  pyproject.toml  pytest.ini  requirements.txt  run_output.txt  runner.py  skulk_report.html  skulk_vs_bigmoney_report.html  wharf_vs_bigmoney_report.html
boards/: astrolabe_treasury.txt  bazaar_council.txt  big_cards.txt  cauldron_curse.txt  green_gardens.txt  inspiring_supplies.txt  iron_barbarian.txt  lisbon.txt  siege_engine.txt  torture_campaign.txt  victoria_kingdom.txt  wealthy_cities.txt  wharf_kingdom.txt  wizards_lich.txt
docs/: dark_ages_card_review.md  lisbon_best_strategy.md
dominion/: boons.py  hexes.py  optimal_strategy_runner.py  runner.py
examples/: compare_chapel_vs_collection_patrician.py  compare_skulk_strategies.py  run_three_player_game.py
generated_strategies/: city_pile_engine.py  lisbon_best_found.py  lisbon_city_crusher.py  lisbon_city_engine.py  open_board_cycle_evolved.py  open_board_torturer_hybrid.py  siege_engine_evolved_evolvedsiegeenginev11.py  siege_engine_evolved_evolvedsiegeenginev1_20260212_230423.py  siege_engine_evolved_evolvedsiegeenginev22.py  siege_engine_evolved_evolvedsiegeenginev2_20260213_005730.py  siege_engine_evolved_evolvedsiegeenginev3_20260213_030316.py  siege_engine_evolved_siege_engine_v1_20260212_184632.py  (+31 more)
(+966 files in other folders)
