[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-overlord"
version = "0.1.0"
description = "Dominion AI Genetic Trainer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coloredlogs",
    "matplotlib",
    "PyYAML",
    "scipy",
    "seaborn",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dominion*"]

[project.scripts]
dominion-trainer = "dominion.runner:main"
